[package]
name = "slyce"
version = "0.1.3"
authors = ["Marko Mikulicic <mmikulicic@gmail.com>"]
edition = "2018"
description = "Python-like slices"
license = "BSD-2-Clause"
repository = "https://github.com/mkmik/slyce/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

exclude = [
    ".github",
    "scripts/gen-readme.sh",
    "README.tpl",
]

[dependencies]
